complete statistical_analysis lab

--- a/statistical_analysis/statistical_analysis.ipynb
+++ b/statistical_analysis/statistical_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "73621e35",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "e2847653",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "9489a6df",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "753c08ca",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "<Axes: xlabel='Age', ylabel='Count'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "1b93e42c",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "Fare         1.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,12 +479,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42045ef7",
+   "metadata": {},
+   "source": [
+    "Is there a significant difference in fare paid by survivors vs non-survivors?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b069b11c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " we are rejecting null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conduct a t-test using scipy.stats.ttest_ind() to compare two sample means.\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "# Drop rows with missing fare or survival info \n",
+    "df = df[['Survived', 'Fare']].dropna()\n",
+    "\n",
+    "# Create two groups\n",
+    "survived = df[df['Survived'] == 1][\"Fare\"]\n",
+    "not_survived = df[df['Survived'] == 0][\"Fare\"]\n",
+    "\n",
+    "# Run t-test\n",
+    "t_stat, p_value = ttest_ind(survived, not_survived, equal_var=False)\n",
+    "\n",
+    "print(\"T-statistics:\", t_stat)\n",
+    "print(\"P-value:\", p_value)\n",
+    "\n",
+    "if p_value < 0.05:    # alpha value is 0.05 or 5%\n",
+    "    print(\"Reject the null hypothesis: Significant difference in mean Fare between survivors and non-survivors.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: No significant differ.ence in mean Fare\")\n"
+   ]
   }
  ],
  "metadata": {
