--- a/class/Numpy.ipynb
+++ b/class/Numpy.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in c:\\users\\abdul ahad\\anaconda3\\lib\\site-packages (1.26.4)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: numpy in c:\\users\\abdul ahad\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.2.4)\n"
      ]
     }
    ],
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +48,7 @@
        "        [-1, -1]]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +72,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,22 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.72833212, 0.79963635, 0.95654337, 0.11745646],\n",
-       "        [0.46217238, 0.20830138, 0.04354799, 0.41218107],\n",
-       "        [0.09291454, 0.98260479, 0.85936967, 0.24624239]],\n",
+       "array([[[0.72537542, 0.2396    , 0.00624761, 0.59862659],\n",
+       "        [0.82409168, 0.03819772, 0.79670395, 0.0939198 ],\n",
+       "        [0.91602224, 0.82140001, 0.91905594, 0.40314368]],\n",
        "\n",
-       "       [[0.53213765, 0.06560753, 0.44020056, 0.21303124],\n",
-       "        [0.51586371, 0.14366324, 0.79015415, 0.92238884],\n",
-       "        [0.43189992, 0.52789158, 0.46113548, 0.86414634]]])"
+       "       [[0.4829657 , 0.14379903, 0.24434039, 0.82191755],\n",
+       "        [0.3874462 , 0.19203127, 0.20857411, 0.16842186],\n",
+       "        [0.96708922, 0.16532174, 0.72065323, 0.67023551]]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +122,7 @@
        "        [1., 1.]]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +146,7 @@
        "        [0., 0.]]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,20 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[10, 10],\n",
-       "        [10, 10]],\n",
+       "array([[[-1, -1],\n",
+       "        [-1, -1]],\n",
        "\n",
-       "       [[10, 10],\n",
-       "        [10, 10]]])"
+       "       [[-1, -1],\n",
+       "        [-1, -1]]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +194,7 @@
        "        [1., 1.]]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +223,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +244,7 @@
        "       [1, 2]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,22 +274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('float64')"
+       "24"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "types"
+    "size"
    ]
   },
   {
@@ -382,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,17 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.57608256 0.27871804 0.7968962  0.29243962 0.01900623 0.25278062\n",
-      " 0.41525049 0.31801285 0.24456204 0.26796839]\n",
-      "[0.99454989 0.03342233 0.53985057 0.71803538 0.07084878 0.60456439\n",
-      " 0.35205881 0.80377866 0.54549948 0.02268119]\n"
+      "[0.91859167 1.81667633 0.67283356 0.45362365 0.6956376  1.02143568\n",
+      " 1.14479545 0.10933102 0.45065317 0.73698532]\n",
+      "[0.02392472 0.93395513 0.4158901  0.16119296 0.54743991 0.14703506\n",
+      " 0.46126101 0.01584386 0.13825848 0.68141625]\n"
      ]
     }
    ],
@@ -926,7 +925,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -940,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
