--- a/class/Z-Test_HypothesisTesting.ipynb
+++ b/class/Z-Test_HypothesisTesting.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,20 +15,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "data = pd.read_csv('/content/sample_data/CardioGoodFitness.csv')"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "SR9SLewzr0-C"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data = pd.read_csv('/content/sample_data/CardioGoodFitness.csv')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data.head()"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -51,19 +35,14 @@
         "id": "uZo-Tw3hr5j9",
         "outputId": "77be7057-ea3d-4c56-cddd-c3d6b0f19ce0"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "  Product  Age  Gender  Education MaritalStatus  Usage  Fitness  Income  Miles\n",
-              "0   TM195   18    Male         14        Single      3        4   29562    112\n",
-              "1   TM195   19    Male         15        Single      2        3   31836     75\n",
-              "2   TM195   19  Female         14     Partnered      4        3   30699     66\n",
-              "3   TM195   19    Male         12        Single      3        3   32973     85\n",
-              "4   TM195   20    Male         13     Partnered      4        2   35247     47"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 180,\n  \"fields\": [\n    {\n      \"column\": \"Product\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"TM195\",\n          \"TM498\",\n          \"TM798\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Age\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 6,\n        \"min\": 18,\n        \"max\": 50,\n        \"num_unique_values\": 32,\n        \"samples\": [\n          45,\n          33,\n          43\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Gender\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Female\",\n          \"Male\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Education\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1,\n        \"min\": 12,\n        \"max\": 21,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          15,\n          18\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"MaritalStatus\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Partnered\",\n          \"Single\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Usage\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1,\n        \"min\": 2,\n        \"max\": 7,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          3,\n          2\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Fitness\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 1,\n        \"max\": 5,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          3,\n          5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Income\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 16506,\n        \"min\": 29562,\n        \"max\": 104581,\n        \"num_unique_values\": 62,\n        \"samples\": [\n          88396,\n          103336\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Miles\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 51,\n        \"min\": 21,\n        \"max\": 360,\n        \"num_unique_values\": 37,\n        \"samples\": [\n          95,\n          169\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "data"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-7a4df6f4-fc9c-43a5-a64c-e898bd8b7262\" class=\"colab-df-container\">\n",
@@ -370,22 +349,27 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "data",
-              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 180,\n  \"fields\": [\n    {\n      \"column\": \"Product\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"TM195\",\n          \"TM498\",\n          \"TM798\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Age\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 6,\n        \"min\": 18,\n        \"max\": 50,\n        \"num_unique_values\": 32,\n        \"samples\": [\n          45,\n          33,\n          43\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Gender\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Female\",\n          \"Male\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Education\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1,\n        \"min\": 12,\n        \"max\": 21,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          15,\n          18\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"MaritalStatus\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Partnered\",\n          \"Single\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Usage\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1,\n        \"min\": 2,\n        \"max\": 7,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          3,\n          2\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Fitness\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 1,\n        \"max\": 5,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          3,\n          5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Income\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 16506,\n        \"min\": 29562,\n        \"max\": 104581,\n        \"num_unique_values\": 62,\n        \"samples\": [\n          88396,\n          103336\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Miles\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 51,\n        \"min\": 21,\n        \"max\": 360,\n        \"num_unique_values\": 37,\n        \"samples\": [\n          95,\n          169\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "  Product  Age  Gender  Education MaritalStatus  Usage  Fitness  Income  Miles\n",
+              "0   TM195   18    Male         14        Single      3        4   29562    112\n",
+              "1   TM195   19    Male         15        Single      2        3   31836     75\n",
+              "2   TM195   19  Female         14     Partnered      4        3   30699     66\n",
+              "3   TM195   19    Male         12        Single      3        3   32973     85\n",
+              "4   TM195   20    Male         13     Partnered      4        2   35247     47"
+            ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "data.head()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data.count()"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -394,23 +378,9 @@
         "id": "Fkrm0Iris-cQ",
         "outputId": "f27dbf45-9765-4fff-e55c-faa12c7b4e65"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "Product          180\n",
-              "Age              180\n",
-              "Gender           180\n",
-              "Education        180\n",
-              "MaritalStatus    180\n",
-              "Usage            180\n",
-              "Fitness          180\n",
-              "Income           180\n",
-              "Miles            180\n",
-              "dtype: int64"
-            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -473,29 +443,43 @@
               "  </tbody>\n",
               "</table>\n",
               "</div><br><label><b>dtype:</b> int64</label>"
+            ],
+            "text/plain": [
+              "Product          180\n",
+              "Age              180\n",
+              "Gender           180\n",
+              "Education        180\n",
+              "MaritalStatus    180\n",
+              "Usage            180\n",
+              "Fitness          180\n",
+              "Income           180\n",
+              "Miles            180\n",
+              "dtype: int64"
             ]
           },
+          "execution_count": 10,
           "metadata": {},
-          "execution_count": 10
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "data.count()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "age = data['Age']"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "XPoFlumpr6_B"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "age = data['Age']"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "age"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -504,25 +488,9 @@
         "id": "0quaXoRfr-6B",
         "outputId": "a6fa1d1b-cd9e-4a6e-b891-c4d18c0aa091"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "0      18\n",
-              "1      19\n",
-              "2      19\n",
-              "3      19\n",
-              "4      20\n",
-              "       ..\n",
-              "175    40\n",
-              "176    42\n",
-              "177    45\n",
-              "178    47\n",
-              "179    48\n",
-              "Name: Age, Length: 180, dtype: int64"
-            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -594,19 +562,34 @@
               "</table>\n",
               "<p>180 rows × 1 columns</p>\n",
               "</div><br><label><b>dtype:</b> int64</label>"
+            ],
+            "text/plain": [
+              "0      18\n",
+              "1      19\n",
+              "2      19\n",
+              "3      19\n",
+              "4      20\n",
+              "       ..\n",
+              "175    40\n",
+              "176    42\n",
+              "177    45\n",
+              "178    47\n",
+              "179    48\n",
+              "Name: Age, Length: 180, dtype: int64"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "age"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "age_mean = np.mean(age)\n",
-        "print(age_mean)"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -614,24 +597,23 @@
         "id": "Lw6WSEsVsDJ4",
         "outputId": "6f3dd43c-5db2-4499-e3e8-14e22904051f"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "28.788888888888888\n"
           ]
         }
+      ],
+      "source": [
+        "age_mean = np.mean(age)\n",
+        "print(age_mean)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "sample_size=10\n",
-        "age_sample=np.random.choice(age,sample_size)\n",
-        "print(age_sample)"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -639,33 +621,35 @@
         "id": "XfcO9oASsw8o",
         "outputId": "1dcd2b9f-5099-46b3-893b-15d6207b3140"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[37 40 45 38 21 40 21 25 23 26]\n"
           ]
         }
+      ],
+      "source": [
+        "sample_size=10\n",
+        "age_sample=np.random.choice(age,sample_size)\n",
+        "print(age_sample)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ztest, pvalue = stests.ztest(age_sample, value=29)\n"
-      ],
+      "execution_count": 11,
       "metadata": {
         "id": "X9ou__qasK4E"
       },
-      "execution_count": 11,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "ztest, pvalue = stests.ztest(age_sample, value=29)\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(pvalue)"
-      ],
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -673,25 +657,22 @@
         "id": "Bs6D4JqdtYwC",
         "outputId": "a074ece5-98e3-43b8-9c88-1248ddf9c653"
       },
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0.3723165192617698\n"
           ]
         }
+      ],
+      "source": [
+        "print(pvalue)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if pvalue < 0.05:    # alpha value is 0.05 or 5%\n",
-        "    print(\" we are rejecting null hypothesis\")\n",
-        "else:\n",
-        "    print(\"we are accepting null hypothesis\")"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -699,25 +680,25 @@
         "id": "HV150m8uta6g",
         "outputId": "a2dccbd5-4f24-4531-c019-38ce3d9f3b05"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "we are accepting null hypothesis\n"
           ]
         }
+      ],
+      "source": [
+        "if pvalue < 0.05:    # alpha value is 0.05 or 5%\n",
+        "    print(\" we are rejecting null hypothesis\")\n",
+        "else:\n",
+        "    print(\"we are accepting null hypothesis\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from scipy.stats import norm\n",
-        "alpha = 0.05\n",
-        "z_critical = norm.ppf(1 - alpha/2)  # for two-tailed test\n",
-        "print(\"Critical z-value:\", z_critical)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -725,25 +706,25 @@
         "id": "vmD1m95j0c3u",
         "outputId": "39da46c0-ceb6-4788-ddba-dcfcf62af288"
       },
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Critical z-value: 1.959963984540054\n"
           ]
         }
+      ],
+      "source": [
+        "from scipy.stats import norm\n",
+        "alpha = 0.05\n",
+        "z_critical = norm.ppf(1 - alpha/2)  # for two-tailed test\n",
+        "print(\"Critical z-value:\", z_critical)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if ztest < z_critical and ztest > -z_critical:\n",
-        "    print(\"we are accepting null hypothesis\")\n",
-        "else:\n",
-        "    print(\"we are rejecting null hypothesis\")"
-      ],
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -751,25 +732,44 @@
         "id": "-An74KkN0l05",
         "outputId": "d78aafbc-326e-4e7b-ab24-09cd1297ca33"
       },
-      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "we are accepting null hypothesis\n"
           ]
         }
+      ],
+      "source": [
+        "if ztest < z_critical and ztest > -z_critical:\n",
+        "    print(\"we are accepting null hypothesis\")\n",
+        "else:\n",
+        "    print(\"we are rejecting null hypothesis\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "j9Zrigrb1cF-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
